--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,11 @@
+Version 0.4 - 2019-09-11
+* Released
+
+Version 0.3 - 2019-09-11
+* Released
+
+Version 0.2 - 2019-09-11
+* Fix setup.py and README.md
+
 Version 0.1 - 2017-06-16
 * Initial release
