--- a/INSTALL
+++ b/INSTALL
@@ -14,6 +14,10 @@ directory where the archive was unpacked, and run:
 
     python setup.py install
 
+    or
+
+    pip install git@github.com:aldovillagra/python-correosexpress.git#egg=correosexpress
+
 Note that you may need administrator/root privileges for this step, as
 this command will by default attempt to install module to the Python
 site-packages directory on your system.
